# jira-clone-be

./: .gitignore  Procfile  package-lock.json  pyproject.toml  requirements.txt
be/: .env.dist  .gitignore  .pre-commit-config.yaml
be/config/: __init__.py  celery.py  settings.py  urls.py
be/custom_auth/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
be/custom_auth/migrations/: 0001_initial.py
be/custom_auth/templates/: account_activation_success_email.html  registraion_success_email.html  registration_success_email.html
be/jira/: models.py
be/jira/migrations/: 0001_initial.py
be/utils/: dispatcher.py  tasks.py
config/: settings.py  urls.py
custom_auth/: froms.py  models.py  urls.py  views.py
custom_auth/migrations/: 0001_initial.py
fe/: .env.dist  .eslintrc.json  package-lock.json  package.json  tailwind.config.js
fe/src/: App.jsx  Page404.jsx  index.html  output.css
fe/src/api/: AccountActivationAPI.jsx  SignupAPI.jsx  apiMethods.jsx  constants.jsx  loginAPI.jsx
fe/src/components/: FormInput.jsx
fe/src/components/auth/: LoginContainer.jsx  LoginForm.jsx  SignupContainer.jsx  SignupForm.jsx
fe/src/components/common/: Logo.jsx
fe/src/pages/auth/: AccountActivation.jsx  Auth.jsx  Authentication.jsx
fe/src/routes/: AccountRouter.jsx  BaseRoute.jsx
fe/src/utils/: apiMethods.jsx  cookieMethod.jsx  csrfTokenGenerator.jsx  localstorageMethods.jsx
jira/migrations/: 0001_initial.py
